# LFX_T2_WasmEdge_MCP_Pre_Test_Attempt

./: .env.local.example  .gitignore  LICENSE  README.md  client.py  pyproject.toml
llamaedge/: Dockerfile.llama3.1-8b  Dockerfile.llama3.2-3b  README.md
server/: pyproject.toml  server.py
server/data/: jsnad_qna.csv
server/scripts/: init.py
server/utils/: utils.py
